# compvision

hw/lab2/: lab2.ipynb
hw/lab3/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
hw/lab4/: CMakeLists.txt  task1.cpp  task2.ipynb
hw/lab5/: lab5.ipynb
